updated testing